test/files/neg/byname-implicits-16.check
byname-implicits-16.scala:14: error: diverging implicit expansion for type Test.O[Test.Z]
starting with method mkN in object Test
  implicitly[O[Z]]
            ^
one error found
